Fix: CSS on mobile browsers. There is more text per line now. Add: New web-optimized fonts because one needs to follow standards to lead a fulfulling life. Add: Upcoming Hello World blog post. Just a bit of editing needed first. Add: Serbian version of Hello World blog post. Also needs a bit of editing. Del: Old heavy fonts.

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,11 +1,48 @@
 @font-face {
-    font-family: PTSerifRegular;
-    src: url(/fonts/PT_Serif-Web-Regular.ttf);
+    font-family: 'DejaVuSansMono';
+    src: local('DejaVu Sans Mono'),
+         url('../fonts/DejaVuSansMono.woff') format('woff');
+    src: url('../fonts/DejaVuSansMono.eot') format('eot'),
+         url('../fonts/DejaVuSansMono.ttf') format('truetype'),
+         url('../fonts/DejaVuSansMono.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: RobotoCondensedBold;
-    src: url(/fonts/RobotoCondensed-Bold.ttf);
+    font-family: 'PTSerif';
+    src: local('PT Serif'),
+         local('PT-Serif'),
+         url('../fonts/PT-Serif-webfont.woff') format('woff');
+    src: url('../fonts/PT-Serif-webfont.eot') format('eot'),
+         url('../fonts/PT-Serif-webfont.ttf') format('truetype'),
+         url('../fonts/PT-Serif-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PTSerif';
+    src: local('PT Serif Italic'),
+         local('PT-Serif-Italic'),
+         url('../fonts/PT-Serif-Italic-webfont.woff') format('woff');
+    src: url('../fonts/PT-Serif-Italic-webfont.eot') format('eot'),
+         url('../fonts/PT-Serif-Italic-webfont.ttf') format('truetype'),
+         url('../fonts/PT-Serif-Italic-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'RobotoCondensedBold';
+    src: local('Roboto Condensed Bold'),
+         local('RobotoCondensed-Bold'),
+         url('../fonts/Roboto-BoldCondensed-webfont.woff') format('woff');
+    src: url('../fonts/Roboto-BoldCondensed-webfont.eot') format('eot'),
+         url('../fonts/Roboto-BoldCondensed-webfont.ttf') format('truetype'),
+         url('../fonts/Roboto-BoldCondensed-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 #container {
@@ -64,8 +101,8 @@ body {
 #content {
     width:auto;
     color: #555555;
-    padding: 0 1em 0 1em;
-    font-family: PTSerifRegular;
+    padding: 0 0.5em 0 0.5em;
+    font-family: PTSerif;
     font-size: 1.1em;
     margin-bottom: 1.5em;
 }
@@ -95,7 +132,7 @@ body {
     text-indent: 1.75em;
     line-height:1.5em;
     margin-bottom: 0.75em;
-    word-spacing: 0.05em;
+    word-spacing: 0.08em;
 }
 
 #content > h2 {
@@ -189,6 +226,7 @@ h1, h2 {
 
 #content ul li {
     margin-bottom: 0.5em;
+    line-height: 1.5em;
 }
 
 #content > .info {
